@@ -45,6 +45,7 @@ tickit_rect_init_bounded.3 = tickit_rect_init_sized.3
 tickit_rect_right.3 = tickit_rect_bottom.3
 
 tickit_rectset_destroy.3 = tickit_rectset_new.3
+tickit_rectset_get_rect.3 = tickit_rectset_rects.3
 tickit_rectset_get_rects.3 = tickit_rectset_rects.3
 
 tickit_string_unref.3 = tickit_string_ref.3
