@@ -6,6 +6,8 @@ tickit_rectset_rects, tickit_rectset_get_rects \- obtain the regions from a rect
 .B #include <tickit.h>
 .sp
 .BI "size_t tickit_rectset_rects(const TickitRectSet *" trs );
+.BI "size_t tickit_rectset_get_rect(const TickitRectSet *" trs ,
+.BI "    size_t " i ", TickitRect *" rect );
 .BI "size_t tickit_rectset_get_rects(const TickitRectSet *" trs ,
 .BI "    TickitRect " rects "[], size_t " n );
 .EE
@@ -14,9 +16,11 @@ Link with \fI\-ltickit\fP.
 .SH DESCRIPTION
 \fBtickit_rectset_rects\fP() returns the number of rectangular regions stored by the rectangle set.
 .PP
+\fBtickit_rectset_get_rect\fP() copies the region representing the rectangle at index \fIi\fP into the variable pointed to by \fIrect\fP, and returns 1. If \fIi\fP is an invalid index for this set then 0 is returned instead.
+.PP
 \fBtickit_rectset_get_rects\fP() copies at most \fIn\fP regions into the array given by \fIrects\fP, and returns the number of regions it copied (which may be fewer than the total stored, if the array was of insufficient size).
 .SH "RETURN VALUE"
-\fBtickit_rectset_rects\fP() returns an integer giving the number of stored regions. \fBtickit_rectset_get_rects\fP() returns the number of regions copied.
+\fBtickit_rectset_rects\fP() returns an integer giving the number of stored regions. \fBtickit_rectset_get_rect\fP() and \fBtickit_rectset_get_rects\fP() return the number of regions copied.
 .SH "SEE ALSO"
 .BR tickit_rectset_new (3),
 .BR tickit_rectset (7),
