@@ -44,6 +44,15 @@ size_t tickit_rectset_rects(const TickitRectSet *trs)
   return trs->count;
 }
 
+size_t tickit_rectset_get_rect(const TickitRectSet *trs, size_t i, TickitRect *rect)
+{
+  if(i >= trs->count)
+    return 0;
+
+  memcpy(rect, trs->rects + i, sizeof(trs->rects[0]));
+  return 1;
+}
+
 size_t tickit_rectset_get_rects(const TickitRectSet *trs, TickitRect rects[], size_t n)
 {
   if(n > trs->count)
