@@ -10,3 +10,4 @@
      + tickit_string_col2byte => tickit_utf8_col2byte
      + tickit_string_count*   => tickit_utf8_count*
   * Added TickitString
+  * Added tickit_rectset_get_rect(3)
